# informatica-grafica-y-visualizacion

./: .gitignore
pr1a/: CMakeLists.txt  cgvInterface.cpp  cgvInterface.h  cgvScene3D.cpp  cgvScene3D.h
pr2b/: CMakeLists.txt  README.md  explain.md
pr2b/src/: cgvCamera.cpp  cgvCamera.h  cgvInterface.cpp  cgvInterface.h  cgvScene3D.cpp  cgvScene3D.h  pr2b.cpp
practiceOneProject/: CMakeLists.txt  conan_provider.cmake  igvInterface.cpp  igvInterface.h  pr1.cpp
practiceOneProject/src/: Camera.cpp  Object3D.cpp
practiceOneProject/src/objects/: Cone.cpp  Cone.h  Cube.cpp  Sphere.h
practiceThreeProject/: ArticulatedModel.cpp  ArticulatedModel.h  CMakeLists.txt  igvInterface.cpp  igvInterface.h
practiceThreeProject/src/: AdvancedOBJLoader.cpp  AdvancedOBJLoader.h  Camera.cpp  Camera.h  Floor.cpp  Floor.h  Light.cpp  Light.h  Material.cpp  Material.h  Object3D.cpp  Object3D.h  Quad.cpp  Quad.h  Texture.cpp  Texture.h  cgvColor.cpp  cgvColor.h  cgvLightSource.cpp  cgvLightSource.h  cgvMaterial.cpp  cgvMaterial.h  cgvPoint3D.cpp  cgvPoint3D.h  cgvTexture.cpp  cgvTexture.h  cgvTriangleMesh.cpp  cgvTriangleMesh.h  stb_image.h
practiceTwoProject/: CMakeLists.txt  igvInterface.cpp  igvInterface.h
practiceTwoProject/src/: Camera.cpp  Object3D.h  cgvPoint3D.cpp  cgvPoint3D.h  cgvScene3D.cpp  cgvScene3D.h  cgvTriangleMesh.cpp  cgvTriangleMesh.h
practiceTwoProject/src/objects/: Cube.h  Sphere.cpp
